--- a/static/style.css
+++ b/static/style.css
@@ -134,6 +134,12 @@ input[type=checkbox] {
     overflow-y:scroll;
 }
 
+.instructions-container {
+    width: 100%;
+    height: 250px;
+    border: 2px solid #F6852F;
+}
+
 .div-chart-type {
     width: 100%;
     height: 150px;
