--- a/static/style.css
+++ b/static/style.css
@@ -202,3 +202,19 @@ input[type=checkbox] {
   border: 2px solid black; /* Add a grey border */
   margin-bottom: 12px; /* Add some space below the input */
 }
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; /* aspect ratio */
+    vertical-align: top;
+    overflow: hidden;
+  }
+  .svg-content-responsive {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+  }
+  }
